<resources>
    <string name="app_name">aaaaaaaaaaa</string>
    <string name="journal">Журнал</string>
    <string name="stat">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="what_do_you_feel">Что вы сейчас чувствуете?</string>
    <string name="today">сегодня</string>
    <string name="i_feel">Я чувствую</string>
    <string name="me">выгорание</string>
    <string name="calm">спокойствие</string>
    <string name="productive">продуктивность</string>
    <string name="productive_high">Продуктивность</string>
    <string name="nervous">беспокойство</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="rage">Ярость</string>
    <string name="envy">Зависть</string>
    <string name="burnout">Выгорание</string>
    <string name="depression">Депрессия</string>
    <string name="tension">Напряжение</string>
    <string name="anxiety">Беспокойство</string>
    <string name="fatigue">Усталость</string>
    <string name="apathy">Апатия</string>
    <string name="excitement">Возбуждение</string>
    <string name="confidence">Уверенность</string>
    <string name="calmness">Спокойствие</string>
    <string name="gratitude">Благодарность</string>
    <string name="delight">Восторг</string>
    <string name="happiness">Счастье</string>
    <string name="satisfaction">Удовлетворенность</string>
    <string name="security">Защищенность</string>
    <string name="send_messages">Присылать напоминания</string>
    <string name="enter_by_fingerprint">Вход по отпечатку пальца</string>
    <string name="remind">Добавить напоминание</string>
    <string name="reminding">Напоминание</string>
    <string name="emotions_by_category">Эмоции по категориям</string>
    <string name="emotions_by_week">Эмоции по дням недели</string>
    <string name="emotions_by_day">Ваше настроение в течение дня</string>
    <string name="often_emotions">Самые частые эмоции</string>
    <string name="early_morning">Раннее утро</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="later_evening">Поздний вечер</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="thursday">Четверг</string>
    <string name="wednesday">Среда</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресение</string>
    <string name="save">Сохранить</string>
    <string name="note">Запись</string>
    <string name="what_have_you_been_doing">Чем вы занимались?</string>
    <string name="with_whom">С кем вы были?</string>
    <string name="where_were_you">Где вы были?</string>
    <string name="choose_emote">Выберите эмоцию, лучше всего описывающую, что вы сейчас чувствуете</string>
</resources>