<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gwen_trial_regular"
        android:text="@string/emotions_by_day"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/early_morning"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/green"
                    android:fontFamily="@font/velasans_bold"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/early_morning"
                    android:fontFamily="@font/velasans_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="12sp"
                    android:textColor="@color/strange_gray"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/morning"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:showDividers="middle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow"
                    android:fontFamily="@font/velasans_bold"
                    android:gravity="center"
                    android:text="50%"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/red"
                    android:fontFamily="@font/velasans_bold"
                    android:gravity="center"
                    android:text="50%"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/morning"
                    android:fontFamily="@font/velasans_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="12sp"
                    android:textColor="@color/strange_gray"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow"
                    android:fontFamily="@font/velasans_bold"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:fontFamily="@font/velasans_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="12sp"
                    android:textColor="@color/strange_gray"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/evening"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue"
                    android:fontFamily="@font/velasans_bold"
                    android:gravity="center"
                    android:text="100%"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evening"
                    android:fontFamily="@font/velasans_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="12sp"
                    android:textColor="@color/strange_gray"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/later_evening"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/shape_8"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/later_evening"
                    android:fontFamily="@font/velasans_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@font/velasans_regular"
                    android:textSize="12sp"
                    android:textColor="@color/strange_gray"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>