<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/often_emotions"
        android:fontFamily="@font/gwen_trial_regular"
        android:textSize="36sp"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/mithosis"
                        tools:srcCompat="@drawable/mithosis" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/velasans_regular"
                        android:text="@string/calmness"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/green_80">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/velasans_bold"
                            android:text="2"
                            android:textAlignment="textStart"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="RtlCompat" />
                    </FrameLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/lightning_1"
                        tools:srcCompat="@drawable/lightning_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/velasans_regular"
                        android:text="@string/productive_high"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/yellow_80">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/velasans_bold"
                            android:text="1"
                            android:textAlignment="textStart"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="RtlCompat" />
                    </FrameLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/ellipse"
                        tools:srcCompat="@drawable/ellipse" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/velasans_regular"
                        android:text="@string/happiness"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/yellow_80">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/velasans_bold"
                            android:text="1"
                            android:textAlignment="textStart"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="RtlCompat" />
                    </FrameLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/summertime_sadness"
                        tools:srcCompat="@drawable/summertime_sadness" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/velasans_regular"
                        android:text="@string/burnout"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_80">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/velasans_bold"
                            android:text="1"
                            android:textAlignment="textStart"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="RtlCompat" />
                    </FrameLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="#00FFFFFF"
                        app:srcCompat="@drawable/shell"
                        tools:srcCompat="@drawable/shell" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/velasans_regular"
                        android:text="@string/fatigue"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/blue_80">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/velasans_bold"
                            android:text="1"
                            android:textAlignment="textStart"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:ignore="RtlCompat" />
                    </FrameLayout>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>